--- a/Formulario.html
+++ b/Formulario.html
@@ -91,7 +91,32 @@
     </div>    
     <br>
     <div>
-        
+        <h4>¿DE DÓNDE ERES?</h4>
+        <br>
+        <p>Ciudad</p>
+        <input type="text" name="Ciudad">
+        <p>Código postal</p>
+        <input type="text" name="Código postal">
+        <p>País</p>
+        <select>
+            <option selected >País</option>
+            <option value="México">México</option>
+            <option value="Chile">Chile</option>
+            <option value="Argentina">Argentina</option>
+            <option value="Perú">Perú</option>
+            <option value="Costa Rica">Costa Rica</option>
+            <option value="Panamá">Panamá</option>
+            <option value="Brazil">Brazil</option>
+        </select>
+    </div>
+    <br>
+    <div>
+        <h4>¿CÓMO QUIERES INICIAR SESIÓN?</h4>
+        <br>
+        <p>Nombre de usuario</p>
+        <input type="text" name="Nombre de usuario">
+        <p>Contraseña</p>
+        <input type="text" name="Contraseña">
     </div>
 </body>
 </html>
