--- a/Formulario.html
+++ b/Formulario.html
@@ -91,7 +91,7 @@
     </div>    
     <br>
     <div>
-        <h4>¿DE DÓNDE ERES?</h4>
+        <legend>¿DE DÓNDE ERES?</legend>
         <br>
         <p>Ciudad</p>
         <input type="text" name="Ciudad">
@@ -111,12 +111,30 @@
     </div>
     <br>
     <div>
-        <h4>¿CÓMO QUIERES INICIAR SESIÓN?</h4>
+        <legend>¿CÓMO QUIERES INICIAR SESIÓN?</legend>
         <br>
         <p>Nombre de usuario</p>
         <input type="text" name="Nombre de usuario">
         <p>Contraseña</p>
         <input type="text" name="Contraseña">
+        <p>Vuelve a escribir la contraseña</p>
+        <input type="text" name="Contraseña_2">
+    </div>
+    <br>
+    <div>
+        <legend>Condiciones de registro</legend>
+        <br>
+        <p>Deseo recibir informacion de la universidad</p>
+        <input type="radio" name="una vez al día" > 
+        <label>Una vez al día</label>
+        <input type="radio" name="una vez a la semana">
+        <label>Una vez a la semana</label>
+        <label>Una vez al mes</label>
+        <br>
+        <input type="checkbox"  name="Acepto" >
+        <label>Acepto el acuerdo de servicios, la declaracion de privacidad y la declaracion de uso de cookies</label>
+        <br>
+        <button type="submit" >Crear cuenta</button>
     </div>
 </body>
 </html>
