--- a/Formulario.html
+++ b/Formulario.html
@@ -11,14 +11,12 @@
     <header> 
         <br>
         <h1>iModelo</h1>
-        <br>
         <h3>Formulario</h3>
-        <br>
     </header>
     <hr>
     <br>
     <div>
-        <h4>¿QUÉN ERES?</h4>
+        <legend>¿QUÉN ERES?</legend>
         <br>
         <p>Nombre</p>
         <input type="text" name="Nombre">
@@ -129,10 +127,12 @@
         <label>Una vez al día</label>
         <input type="radio" name="una vez a la semana">
         <label>Una vez a la semana</label>
+        <input type="radio" name="una vez al mes">
         <label>Una vez al mes</label>
         <br>
         <input type="checkbox"  name="Acepto" >
         <label>Acepto el acuerdo de servicios, la declaracion de privacidad y la declaracion de uso de cookies</label>
+        <br>
         <br>
         <button type="submit" >Crear cuenta</button>
     </div>
