--- a/Formulario.html
+++ b/Formulario.html
@@ -11,11 +11,12 @@
     <header> 
         <br>
         <h1>iModelo</h1>
-        <h3>Formulario</h3>
+        <h3>Formulario</h3> 
     </header>
     <hr>
     <br>
-    <div>
+    
+    <fieldset>
         <legend>¿QUÉN ERES?</legend>
         <br>
         <p>Nombre</p>
@@ -86,9 +87,12 @@
             <option value="1996">1999</option>
             <option value="1995">1999</option>
         </select>
-    </div>    
+        <br>
+    </fieldset>    
     <br>
-    <div>
+
+
+    <fieldset>
         <legend>¿DE DÓNDE ERES?</legend>
         <br>
         <p>Ciudad</p>
@@ -106,9 +110,12 @@
             <option value="Panamá">Panamá</option>
             <option value="Brazil">Brazil</option>
         </select>
-    </div>
+        <br>
+    </fieldset>
     <br>
-    <div>
+
+
+    <fieldset>
         <legend>¿CÓMO QUIERES INICIAR SESIÓN?</legend>
         <br>
         <p>Nombre de usuario</p>
@@ -117,10 +124,12 @@
         <input type="text" name="Contraseña">
         <p>Vuelve a escribir la contraseña</p>
         <input type="text" name="Contraseña_2">
-    </div>
+        <br>
+    </fieldset>
     <br>
-    <div>
-        <legend>Condiciones de registro</legend>
+
+    <fieldset>
+        <legend>CONDICIONES DE REGISTRO</legend>
         <br>
         <p>Deseo recibir informacion de la universidad</p>
         <input type="radio" name="una vez al día" > 
@@ -130,11 +139,14 @@
         <input type="radio" name="una vez al mes">
         <label>Una vez al mes</label>
         <br>
+        <br>
         <input type="checkbox"  name="Acepto" >
         <label>Acepto el acuerdo de servicios, la declaracion de privacidad y la declaracion de uso de cookies</label>
         <br>
         <br>
+        <br>
         <button type="submit" >Crear cuenta</button>
-    </div>
+        <br>
+    </fieldset>
 </body>
 </html>
