--- a/Formulario.html
+++ b/Formulario.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Estilos.css">
+    
     <title>Registro-iMODELO</title>
+ 
 </head>
 <body>
     <header> 
@@ -22,7 +24,8 @@
         <p>Nombre</p>
         <input type="text" name="Nombre">
         <p>Apellidos</p>
-        <input type="text" name="Apellidos">
+        <input type="text" name="Apellidos" id="Apellidos">
+        <button onclick="MiFuncion()">Probar</button>
         <p>Correo electrónico</p>
         <input type="text" name="Correo">
         <p>Fecha de nacimiento</p>
@@ -148,5 +151,8 @@
         <button type="submit" >Crear cuenta</button>
         <br>
     </fieldset>
+    <script src="Nuevo.js">
+        
+    </script>
 </body>
 </html>
